Trying to avoid scrollbars.

--- a/public/stylesheets/gif.css
+++ b/public/stylesheets/gif.css
@@ -23,8 +23,8 @@ a:active {
 }
 
 #gif {
-	width : 100%;
-	height : 100%;
+	width : 99%;
+	height : 99%;
 	position : relative;
 	align : left;
 }
